# zotero-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  config.py  main.py  pyproject.toml
app/.chainlit/: config.toml
embeddings/: embed.py  pyproject.toml
eval/: questions.yaml  run.py
ingest/: Dockerfile  chunker.py  config.py  embedder.py  main.py  parser.py  pyproject.toml  zotero_reader.py
retrieval/: llm.py  prompt.py  pyproject.toml  search.py
tests/: test_chunker.py  test_embed.py  test_embedder.py  test_prompt.py  test_zotero_reader.py
