[project]
name = "zotero-rag"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["ingest", "app", "retrieval"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ingest modules are flat (not an installed package); retrieval is installed via the
# workspace, so its modules import directly.
pythonpath = ["ingest"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
