[project]
name = "zotero-rag-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chainlit",
    "lancedb",
    "httpx",
    "litellm",
    "python-dotenv",
    "loguru",
    "polars",
    "pydantic-settings",
    "tenacity",
    "zotero-rag-retrieval",
]

[tool.uv]
package = false

[tool.uv.sources]
zotero-rag-retrieval = { workspace = true }
