[project]
name = "zotero-rag-ingest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars",
    "python-dotenv",
    "loguru",
    "docling",
    "lancedb",
    "pylance",
    "pydantic-settings",
    "tqdm",
    "zotero-rag-embeddings",
]

[tool.uv]
package = false

[tool.uv.sources]
zotero-rag-embeddings = { workspace = true }
